# GraphicsTest

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Contributing.md  Readme.md  cmake-variants.yaml
CMake/: GitVersioning.cmake
CMakeModules/: CCache.cmake  CheckAndAddCompileOption.cmake
Source/: .clang-format  CMakeLists.txt
Source/Common/: CMakeLists.txt  SCM.h.in  Version.cpp  Version.hpp
Source/Core/: CMakeLists.txt  Core.cpp  Core.hpp
Source/GraphicsTestCLI/: CMakeLists.txt  Main.cpp
Tools/: Lint.sh
